# CacheDemoProject

./: build.sh  npm-build.sh
.github/workflows/: greetings.yml  manual.yml
Java/: .dockerignore  Dockerfile  build.gradle
NodeJs/: .dockerignore  Dockerfile  package.json
Python/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Python/app/: main.py
Python/tests/: test_health.py
