[project]
name = "cache-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.4",
    "httpx==0.27.0",
    "sqlalchemy==2.0.30",
    "aiosqlite==0.20.0",
    "redis==5.0.4",
    "python-dotenv==1.0.1",
    "loguru==0.7.2",
    "orjson==3.10.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
